--- a/docs/Makefile
+++ b/docs/Makefile
@@ -47,6 +47,7 @@ help:
 	@echo "  linkcheck  to check all external links for integrity"
 	@echo "  doctest    to run all doctests embedded in the documentation (if enabled)"
 	@echo "  coverage   to run coverage check of the documentation (if enabled)"
+	@echo "  commit     to commit the latest documentation to GitHub"
 
 clean:
 	rm -rf $(BUILDDIR)/*
@@ -190,3 +191,8 @@ pseudoxml:
 	$(SPHINXBUILD) -b pseudoxml $(ALLSPHINXOPTS) $(BUILDDIR)/pseudoxml
 	@echo
 	@echo "Build finished. The pseudo-XML files are in $(BUILDDIR)/pseudoxml."
+
+commit:
+	@cd $(BUILDDIR)/html
+	@git commit -a -m "Updated docs"
+	@git push
