--- a/circle.yml
+++ b/circle.yml
@@ -3,3 +3,4 @@ test:
     - mkdir -p $CIRCLE_TEST_REPORTS/nose
     - mkdir -p $CIRCLE_ARTIFACTS/coverage
     - nosetests --with-xunit --with-coverage --xunit-file=$CIRCLE_TEST_REPORTS/nose/tests.xml --cover-package=aeolis --cover-xml --cover-xml-file=$CIRCLE_TEST_REPORTS/nose/coverage.xml --cover-html --cover-html-dir=$CIRCLE_ARTIFACTS/coverage
+    - codecov
