--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 netCDF4==1.4.1
 coverage
 codecov
-sphinxcontrib-bibtex==0.3.2
-sphinxcontrib-napoleon==0.2.8
+sphinxcontrib-bibtex
+sphinxcontrib-napoleon
