--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
     docker:
       # specify the version you desire here
       # use `-browsers` prefix for selenium tests, e.g. `3.6.1-browsers`
-      - image: circleci/python:3.6.1
+      - image: circleci/python:3.7.3
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
@@ -48,7 +48,12 @@ jobs:
           name: run tests
           command: |
             . venv/bin/activate
-            python setup.py test
+            test:
+              override:
+                - mkdir -p $CIRCLE_TEST_REPORTS/nose
+                - mkdir -p $CIRCLE_ARTIFACTS/coverage
+                - nosetests --with-coverage
+                - codecov
 
       - store_artifacts:
           path: test-reports
