--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,7 +48,7 @@ jobs:
           name: run tests
           command: |
             . venv/bin/activate
-            python setup.py nosetests
+            - nosetests --with-coverage
 
       - store_artifacts:
           path: test-reports
