--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -9,8 +9,9 @@
 name: Upload PyPI Release 
 
 on:
-  release:
-    types: [published]
+  workflow_dispatch
+#   release:
+#     types: [published]
 
 permissions:
   contents: read
