--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -9,9 +9,8 @@
 name: Upload PyPI Release 
 
 on:
-  workflow_dispatch
-#   release:
-#     types: [published]
+  release:
+    types: [published]
 
 permissions:
   contents: read
@@ -33,14 +32,14 @@ jobs:
         pip install build
     - name: Build package
       run: python -m build
-    - name: Test build installation
+    - name: Test package import
       run: |
         python -m venv venv-aeolis
         source venv-aeolis/bin/activate
         pip install dist/AeoLiS-*.whl
         python -c "from aeolis import model; print('Success!')"
-    # - name: Publish package
-    #   uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
-    #   with:
-    #     user: __token__
-    #     password: ${{ secrets.PYPI_API_TOKEN }}
+    - name: Publish package
+      uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
+      with:
+        user: __token__
+        password: ${{ secrets.PYPI_API_TOKEN }}
