update release pipeline

--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -36,7 +36,7 @@ jobs:
       run: |
         python -m venv venv-aeolis
         source venv-aeolis/bin/activate
-        pip install dist/AeoLiS-*.whl
+        pip install dist/aeolis-*.whl
         python -c "from aeolis import model; print('Success!')"
     - name: Publish package
       uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
