Prepare for release 2.1.2
Note that toml file 'project name' need to be lower case to be compatible with module name. Otherwise module does not load on windows machine.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,8 @@ exclude = [
 ]
 
 [project]
-name = "AeoLiS"
-version = "2.1.1"
+name = "aeolis"
+version = "2.1.2"
 authors = [
   { name="Sierd de Vries", email="sierd.devries@tudelft.nl" },
 ]
