--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,6 +54,10 @@ classifiers = [
     "pytest-cov",
     "Sphinx",
     "sphinx-rtd-theme",
+    "sphinxcontrib-bibtex>=2.5.0",
+    "sphinx-copybutton==0.5.2",
+    "plot==0.6.5",
+    "nbsphinx>=0.9.2",
   ]
 
 [project.scripts]
