--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ exclude = [
 
 [project]
 name = "aeolis"
-version = "2.1.2"
+version = "2.1.3"
 authors = [
   { name="Sierd de Vries", email="sierd.devries@tudelft.nl" },
 ]
@@ -52,8 +52,12 @@ classifiers = [
   dev = [ 
     "pytest",
     "pytest-cov",
-    "Sphinx",
+    "Sphinx<7",
     "sphinx-rtd-theme",
+    "sphinxcontrib-bibtex>=2.5.0",
+    "sphinx-copybutton==0.5.2",
+    "plot==0.6.5",
+    "nbsphinx>=0.9.2",
   ]
 
 [project.scripts]
