--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,13 @@ exclude = [
   "/aeolis/tests",
 ]
 
+[tool.hatch.build.targets.wheel]
+only-include = ["aeolis", "examples"]
+
+[tool.hatch.build.targets.wheel.sources]
+"aeolis" = "aeolis"
+"examples" = "aeolis/examples"
+
 [project]
 name = "aeolis"
 version = "2.1.3"
@@ -24,7 +31,8 @@ requires-python = ">=3.8, <4"
 license = {file = "LICENSE.txt"}
 keywords = ["aeolian sediment", "transport", "model", "deltares", "tudelft"]
 dependencies = [
-  "docopt==0.6.1",
+  "docopt",
+  "typer",
   "bmi-python",
   "netCDF4",
   "scipy",
@@ -63,6 +71,8 @@ classifiers = [
 [project.scripts]
 aeolis = "aeolis.console:aeolis"
 aeolis-wind = "aeolis.console:wind"
+aeolis-examples = "aeolis.console:examples"
+new-cli = "aeolis.console_typer:app"
 
 [project.urls]
 Homepage = "https://github.com/openearth/aeolis-python"
