--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,7 +66,7 @@ classifiers = [
 aeolis = "aeolis.console:aeolis"
 aeolis-wind = "aeolis.console:wind"
 aeolis-examples = "aeolis.console:examples"
-new-cli = "aeolis.console_typer:app"
+aeolis-new = "aeolis.console_typer:app"
 
 [project.urls]
 Homepage = "https://github.com/openearth/aeolis-python"
