--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,11 +3,11 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 [tool.hatch.build]
 exclude = [
-  "/docs", 
+  "/docs",
   "/notebooks",
   "/aeolis/tests",
   "/aeolis/examples/1D",
-  "/aeolis/examples/grainsizevariations", 
+  "/aeolis/examples/grainsizevariations",
 ]
 
 [project]
@@ -22,7 +22,7 @@ maintainers = [
 ]
 description = "A process-based model for simulating supply-limited aeolian sediment transport"
 readme = "README.md"
-requires-python = ">=3.8, <4"
+requires-python = ">=3.9, <4"
 license = {file = "LICENSE.txt"}
 keywords = ["aeolian sediment", "transport", "model", "deltares", "tudelft"]
 dependencies = [
@@ -46,13 +46,13 @@ classifiers = [
   "Operating System :: Microsoft :: Windows",
   "Operating System :: POSIX",
   "Operating System :: Unix",
-  "Programming Language :: Python :: 3.8",
+  "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
   "Topic :: Scientific/Engineering :: Physics",
 ]
 
 [project.optional-dependencies]
-  dev = [ 
+  dev = [
     "pytest",
     "pytest-cov",
     "Sphinx<7",
@@ -64,10 +64,7 @@ classifiers = [
   ]
 
 [project.scripts]
-aeolis = "aeolis.console:aeolis"
-aeolis-wind = "aeolis.console:wind"
-aeolis-examples = "aeolis.console:examples"
-aeolis-new = "aeolis.console_typer:app"
+aeolis = "aeolis.console:start_aeolis_app"
 
 [project.urls]
 Homepage = "https://github.com/openearth/aeolis-python"
