--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,13 +12,13 @@ exclude = [
 
 [project]
 name = "aeolis"
-version = "2.1.3"
+version = "3.0.0.rc1"
 authors = [
   { name="Sierd de Vries", email="sierd.devries@tudelft.nl" },
 ]
 maintainers = [
   {name="Sierd de Vries", email="sierd.devries@tudelft.nl"},
-  {name="Bart van de Westen"},
+  {name="Bart van Westen"},
 ]
 description = "A process-based model for simulating supply-limited aeolian sediment transport"
 readme = "README.md"
