--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,7 +1,7 @@
 FROM continuumio/miniconda3
 
 # Set the working directory
-#WORKDIR /workspace
+# WORKDIR /workspace
 
 # Install Python
 RUN conda install python -y
@@ -10,7 +10,7 @@ RUN conda install python -y
 # COPY . .
 
 # Install the necessary packages
-RUN pip install .
+# RUN pip install .
 
 # Clean up
 RUN conda clean -afy
